2007-08-07  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_resource.c (xnee_parse_option_impl): 
	xnee_replay_offset ==> replay-offset

2007-07-30  Henrik Sandklef  <hesa@gnu.org>

	* libxnee/src/xnee_range.c (is_dangerous_xserver): 
	Fix for X.org releases, recording of deliv events 
	seem need a work around

2007-07-09  Henrik Sandklef  <hesa@gnu.org>

	* libxnee/src/print.c: 

	Updated version printout according to 
	new GNU standards.

2007-07-03  Henrik Sandklef  <hesa@gnu.org>

	* pnee/src/callbacks.c (PNEE_CHECK_CHAR_PTR): 
	* gnee/src/gnee_xnee.c (GNEE_CHECK_CHAR_PTR): 

	Added (and used) macro to check mem size to alloc
	
2007-07-02  Henrik Sandklef  <hesa@gnu.org>

	* gnee/src/callbacks.h: 
	* gnee/src/callbacks.c: 
	* gnee/src/interface.c: 
	* pnee/src/callbacks.h: 
	* pnee/src/callbacks.c: 
	* pnee/src/interface.c: 

	GPLv3 fixes, About->close works

	* configure.in: 

	Defines function check_doc_program 
	before usage

2007-06-30  Henrik Sandklef  <hesa@gnu.org>

	* : 

	Upgrade to GPLv3

2007-06-18  Henrik Sandklef  <hesa@sandklef.com>

	* Makefile.am (SUBDIRS): 

	Added man dir to SUBDIRS

	* doc/Makefile.am: 

	Adding xnee.pdf|ps|gtml|txt to EXTRA_DIST

	* configure.in: 

	Docs are not built by default
	(Docs are shipped with the dist file instead)

	* cnee/src/cnee_printer.c: 

	Updated copyright info printout

	* libxnee/src/xnee_range.c: 

	Searching for X server verion fix

	* gnee/src/interface.c: 
	* gnee/src/main.c: 
	* gnee/src/callbacks.c: 

	various picture fixes
	
	* pnee/man/pnee.1.in: 
	* gnee/man/gnee.1.in: 

	Updated copyright info

	* pnee/man/Makefile.am: 
	* gnee/man/Makefile.am: 

	Added CLEAN_FILES

	* man/Makefile.am: 

	Building man page instead of static
	
	* man/xnee.1: 

	Removed file
	
2007-06-15  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: 
	* man/Makefile.am: 
	* man/xnee.1: 

	Added basic man page for GNU Xnee for Debian distr.

2007-05-11  Henrik Sandklef  <hesa@gnu.org>

	* doc/xnee_faq.texi: 
