@@ -1,3 +1,9 @@
+2007-08-13  Henrik Sandklef  <hesa@gnu.org>
+
+	* libxnee/src/xnee_resource.c (xnee_parse_option_impl): 
+
+	typo fixed
+
 2007-08-07  Henrik Sandklef  <hesa@sandklef.com>
 
 	* libxnee/src/xnee_resource.c (xnee_parse_option_impl): 
